@@ -48,6 +48,7 @@ public:
   void draw( KigPainter& p ) const;
   bool contains( const Coordinate& p, int width, const KigWidget& w ) const;
   bool inRect( const Rect& r, int width, const KigWidget& w ) const;
+  Rect surroundingRect() const;
 
   ObjectImp* transform( const Transformation& ) const;
 };
