@@ -55,6 +55,7 @@ public:
   bool contains( const Coordinate& p, int width, const KigWidget& ) const;
   bool inRect( const Rect& r, int width, const KigWidget& ) const;
   bool valid() const;
+  Rect surroundingRect() const;
 
   const uint numberOfProperties() const;
   const ObjectImpType* impRequirementForProperty( uint which ) const;
