@@ -41,6 +41,7 @@ public:
   void draw( KigPainter& p ) const;
   bool contains( const Coordinate& p, int width, const KigWidget& ) const;
   bool inRect( const Rect& r, int width, const KigWidget& ) const;
+  Rect surroundingRect() const;
 
   const uint numberOfProperties() const;
   const QCStringList properties() const;
@@ -80,6 +81,7 @@ public:
   void draw( KigPainter& p ) const;
   bool contains( const Coordinate& p, int width, const KigWidget& ) const;
   bool inRect( const Rect& r, int width, const KigWidget& ) const;
+  Rect surroundingRect() const;
 
   const uint numberOfProperties() const;
   const QCStringList properties() const;
@@ -123,6 +125,7 @@ public:
   void draw( KigPainter& p ) const;
   bool contains( const Coordinate& p, int width, const KigWidget& w ) const;
   bool inRect( const Rect& r, int width, const KigWidget& si ) const;
+  Rect surroundingRect() const;
   bool valid() const;
 
   const uint numberOfProperties() const;
