@@ -1,3 +1,11 @@
+2004-04-17  Dominique Devriese  <devriese@kde.org>
+
+	* Fix the calculation of the rectangle containing the entire
+	document ( which is used for centering on the document ), to take
+	into account non-point objects.  This is accomplished by adding a
+	surroundingRect function to ObjectImp, and by implementing it
+	properly for all objects that can have such a thing.
+
 2004-04-15  Pino Toscano <toscano.pino@tiscali.it>
 
 	* More work in Dr. Geo filter: add a new object and simplifying a
